Some look and feel changes

--- a/templates/partials/navbar.phtml
+++ b/templates/partials/navbar.phtml
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-danger text-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-info text-dark">
 	<a class="navbar-brand" href="#">
 		<img src="/assets/img/favicon.png" width="30" height="30" class="d-inline-block align-top" alt="">
-		Yo Ladrillo
+		App Laboratorio
 	</a>
 	
 	<?php if (isset($username_session) or isset($project_session) or isset($company_session)) : ?>
