--- a/templates/partials/navbar.phtml
+++ b/templates/partials/navbar.phtml
@@ -114,10 +114,10 @@
 				</li>
 				<?php endif; ?>
 				
-				<?php if (isset($username_session)) : ?>
+				<?php if (isset($display_name_session)) : ?>
 				<li class="nav-item dropdown active">
 					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						<i class="fa fa-user-check"></i> <?= $username_session ?>
+						<i class="fa fa-user-check"></i> <?= $display_name_session ?>
 					</a>
 					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 						<a class="dropdown-item" href="#"><i class="fa fa-edit"></i> Editar perfil</a>
