--- a/templates/sales.phtml
+++ b/templates/sales.phtml
@@ -69,15 +69,7 @@
 										<div class="form-group">
 											<label class="font-weight-bold">Fecha:</label>
 											<br>
-											<input type="date" class="form-control" name="doc-date" />
-										</div>
-									</div>
-									
-									<div class="col-lg-3 col-md-6">
-										<div class="form-group">
-											<label class="font-weight-bold">No. de comprobante:</label>
-											<br>
-											<input type="text" class="form-control" name="doc-number" value="0000-00000000" />
+											<input type="datetime" class="form-control" name="doc-date" />
 										</div>
 									</div>
 								</div>
