--- a/templates/sales_query.phtml
+++ b/templates/sales_query.phtml
@@ -122,19 +122,10 @@
 							title: 'Código',
 							width: '10%',
 						},
-						number: {
-							title: 'Número',
-							width: '20%',
-							listClass: 'd-none d-lg-table-cell',
-						},
 						customer_id: {
-							title: 'Proveedor',
+							title: 'Cliente',
 							width: '30%',
 							options: '/customers/options',
-						},
-						total: {
-							title: 'Total',
-							width: '20%',
 						},
 					}
 				});
