--- a/templates/sales.phtml
+++ b/templates/sales.phtml
@@ -69,7 +69,7 @@
 										<div class="form-group">
 											<label class="font-weight-bold">Fecha:</label>
 											<br>
-											<input type="datetime" class="form-control" name="doc-date" />
+											<input type="datetime-local" class="form-control" name="doc-date" />
 										</div>
 									</div>
 								</div>
