--- a/templates/sales_query.phtml
+++ b/templates/sales_query.phtml
@@ -119,7 +119,7 @@
 							width: '10%',
 							display: function(data) {
 								const d = new Date(data.record.dated_at);
-								return d.toLocaleDateString() + d.toLocaleTimeString().substr(0, 5);
+								return d.toLocaleDateString() + " " + d.toLocaleTimeString().substr(0, 5);
 							}
 						},
 						document_type_code: {
