--- a/templates/sales_report.phtml
+++ b/templates/sales_report.phtml
@@ -23,7 +23,6 @@
 		
 		<?php $customers_enabled 			= (isset($customers) and count($customers) > 0); ?>
 		<?php $salesDocsTypes_enabled		= (isset($salesDocsTypes) and count($salesDocsTypes) > 0); ?>
-		<?php $collectionsDocsTypes_enabled	= (isset($collectionsDocsTypes) and count($collectionsDocsTypes) > 0); ?>
 		
 		<div class="container-fluid">
 			<div class="content">
@@ -74,28 +73,6 @@
 											</select>
 										</div>
 									</div>
-									
-									<div class="col-lg-4 col-md-6">
-										<div class="form-group">
-											<label class="font-weight-bold">Comp. de Cobros:</label>
-											<div class="form-check form-check-inline">
-												<input class="form-check-input" type="checkbox" name="collections-docs-types-check-nothing">
-												<label class="form-check-label">Ninguno</label>
-											</div>
-											<br>
-											<label <?= !$collectionsDocsTypes_enabled ? '' : 'class="d-none" ' ?>name="collections-docs-types-label"><i class="fa fa-exclamation-triangle"></i> No hay documentos disponibles!</label>
-											<select class="form-control<?= $collectionsDocsTypes_enabled ? '' : ' d-none' ?>" name="collections-docs-types-select" multiple="multiple">
-											<?php if ($collectionsDocsTypes_enabled) : ?>
-											<?php foreach($collectionsDocsTypes as $documentType) : ?>
-												<option
-													value="<?= $documentType->unique_code ?>">
-													<?= trim($documentType->description) ?>
-												</option>
-											<?php endforeach; ?>
-											<?php endif; ?>
-											</select>
-										</div>
-									</div>
 								</div>
 								
 								<div class="row">
@@ -131,9 +108,6 @@
 				if ( !$('select[name="sales-docs-types-select"]').hasClass('d-none') )
 					$('select[name="sales-docs-types-select"]').select2({ width: '100%' });
 				
-				if ( !$('select[name="collections-docs-types-select"]').hasClass('d-none') )
-					$('select[name="collections-docs-types-select"]').select2({ width: '100%' });
-				
 				// click on report
 				$('div[name="btn-report"]').on('click', function(e) {
 					e.preventDefault();
@@ -143,26 +117,17 @@
 						salesDocsCodes = $('select[name="sales-docs-types-select"]').val();
 					}
 					
-					var collectionsDocsCodes = ['x'];
-					if ( !$('input[name="collections-docs-types-check-nothing"]').prop('checked') ) {
-						collectionsDocsCodes = $('select[name="collections-docs-types-select"]').val();
-					}
-					
 					$.ajax({
 						method: 'POST',
 						url: '/sales/report',
 						data: { 
 							customers_ids : 			$('select[name="customers-select"]').val(),
 							sales_docs_codes : 			salesDocsCodes,
-							collections_docs_codes : 	collectionsDocsCodes,
 						},
 						success: function(data, textStatus, jqXHR) {
 							
-							if (data.Result == 'OK') {
-								/*var content = "";
-								data.Records.forEach(function(record){
-									content += record.value;
-								});*/
+							if (data.Result == 'OK')
+							{
 								$('textarea[name="report-content"]').html(data.Records);
 							}
 							else {
@@ -179,11 +144,6 @@
 				$('input[name="sales-docs-types-check-nothing"]').on('change', function(e) {
 					var checked = $(this).prop('checked');
 					$('select[name="sales-docs-types-select"]').prop("disabled", checked);
-				});
-				
-				$('input[name="collections-docs-types-check-nothing"]').on('change', function(e) {
-					var checked = $(this).prop('checked');
-					$('select[name="collections-docs-types-select"]').prop("disabled", checked);
 				});
 				
 			});
