--- a/templates/sales.phtml
+++ b/templates/sales.phtml
@@ -17,7 +17,7 @@
 					<div class="col-12 p-0">
 						<div class="card card-no-rounded">
 							<div class="card-header d-flex justify-content-between align-items-center">
-								<span><b><i class="fa fa-receipt"></i> Ventas <i class="fa fa-chevron-right"></i> Confección de Comprobantes</b></span>
+								<span><b><i class="fa fa-receipt"></i> Ventas <i class="fa fa-chevron-right"></i> <?= ((isset($headerId) and $headerId > 0) ? "Edición" : "Confección") ?> de Comprobantes</b></span>
 							</div>
 							
 							<?php if (isset($headerId) and $headerId > 0) : ?>
