--- a/templates/partials/navbar.phtml
+++ b/templates/partials/navbar.phtml
@@ -25,7 +25,7 @@
 					<a class="dropdown-item" href="/sales"><i class="fa fa-receipt"></i> Confección de Comprobantes</a>
 					<a class="dropdown-item" href="/sales/query"><i class="fa fa-search"></i> Consulta de Comprobantes</a>
 					<div class="dropdown-divider"></div>
-					<a class="dropdown-item" href="/sales/report"><i class="fa fa-list-ul"></i> Listado de Comprobantes</a>
+					<a class="dropdown-item" href="/sales/report"><i class="fa fa-list-ul"></i> Listado de Ventas</a>
 				</div>
 			</li>
 			
