--- a/templates/customers.phtml
+++ b/templates/customers.phtml
@@ -77,6 +77,26 @@
 							width: '20%',
 							inputClass: 'form-control',
 						},
+						email: {
+							title: 'Correo',
+							width: '20%',
+							inputClass: 'form-control',
+						},
+						location: {
+							title: 'Domicilio',
+							width: '20%',
+							inputClass: 'form-control',
+						},
+						contact_name: {
+							title: 'Nombre de Contacto',
+							width: '20%',
+							inputClass: 'form-control',
+						},
+						phone_number: {
+							title: 'Teléfono',
+							width: '20%',
+							inputClass: 'form-control',
+						},
 						menu: {
 							title: '',
 							width: '10%',
