--- a/templates/sales_report.phtml
+++ b/templates/sales_report.phtml
@@ -148,7 +148,7 @@
 							if (data.Result == 'OK')
 							{
 								var body = $('div[name="report-content"] > table[name="table-report"] > tbody');
-								body.appendChild("<tr><td>caca</td></tr>");
+								body.append("<tr><td>caca</td></tr>");
 							}
 							else {
 								alert('error');
