--- a/templates/sales_report.phtml
+++ b/templates/sales_report.phtml
@@ -150,7 +150,7 @@
 						data: { 
 							customers_ids : 	$('select[name="customers-select"]').val(),
 							sales_docs_codes : 	salesDocsCodes,
-							dated_at :			$('input[name="dated-at"]'),
+							dated_at :			$('input[name="dated-at"]').val(),
 						},
 						success: function(data, textStatus, jqXHR)
 						{
