--- a/templates/sales_report.phtml
+++ b/templates/sales_report.phtml
@@ -83,8 +83,12 @@
 								</div>
 								
 								<div class="row">
-							        <div class="col">
+							        <div class="col-12 col-md-4 col-lg-3">
 										<div class="btn btn-outline-primary" name="btn-report"><i class="fa fa-report"></i> Generar Reporte</div>
+									<div>
+
+									<div class="col-12 col-md-4 col-lg-3">
+										<div class="btn btn-outline-primary" name="btn-export"><i class="fa fa-xls"></i> Exportar a Excel</div>
 									<div>
 								</div>
 								
@@ -93,7 +97,7 @@
 							    <div class="row mt-3">
 							        <div class="col">
 							            <div name="report-content" class="table table-responsive">
-											<table name="table-report">
+											<table id="table_report" name="table-report">
 												<thead>
 													<tr>
 														<th>ID</th>
@@ -126,6 +130,106 @@
 		<!-- Optional JavaScript -->
 		<script>
 			$(function(){
+
+				// export to excel
+				var xport = {
+					_fallbacktoCSV: true,  
+					toXLS: function(tableId, filename) {   
+						this._filename = (typeof filename == 'undefined') ? tableId : filename;
+						
+						//var ieVersion = this._getMsieVersion();
+						//Fallback to CSV for IE & Edge
+						if ((this._getMsieVersion() || this._isFirefox()) && this._fallbacktoCSV) {
+						return this.toCSV(tableId);
+						} else if (this._getMsieVersion() || this._isFirefox()) {
+						alert("Not supported browser");
+						}
+
+						//Other Browser can download xls
+						var htmltable = document.getElementById(tableId);
+						var html = htmltable.outerHTML;
+
+						this._downloadAnchor("data:application/vnd.ms-excel" + encodeURIComponent(html), 'xls'); 
+					},
+					toCSV: function(tableId, filename) {
+						this._filename = (typeof filename === 'undefined') ? tableId : filename;
+						// Generate our CSV string from out HTML Table
+						var csv = this._tableToCSV(document.getElementById(tableId));
+						// Create a CSV Blob
+						var blob = new Blob([csv], { type: "text/csv" });
+
+						// Determine which approach to take for the download
+						if (navigator.msSaveOrOpenBlob) {
+						// Works for Internet Explorer and Microsoft Edge
+						navigator.msSaveOrOpenBlob(blob, this._filename + ".csv");
+						} else {      
+						this._downloadAnchor(URL.createObjectURL(blob), 'csv');      
+						}
+					},
+					_getMsieVersion: function() {
+						var ua = window.navigator.userAgent;
+
+						var msie = ua.indexOf("MSIE ");
+						if (msie > 0) {
+						// IE 10 or older => return version number
+						return parseInt(ua.substring(msie + 5, ua.indexOf(".", msie)), 10);
+						}
+
+						var trident = ua.indexOf("Trident/");
+						if (trident > 0) {
+						// IE 11 => return version number
+						var rv = ua.indexOf("rv:");
+						return parseInt(ua.substring(rv + 3, ua.indexOf(".", rv)), 10);
+						}
+
+						var edge = ua.indexOf("Edge/");
+						if (edge > 0) {
+						// Edge (IE 12+) => return version number
+						return parseInt(ua.substring(edge + 5, ua.indexOf(".", edge)), 10);
+						}
+
+						// other browser
+						return false;
+					},
+					_isFirefox: function(){
+						if (navigator.userAgent.indexOf("Firefox") > 0) {
+						return 1;
+						}
+						
+						return 0;
+					},
+					_downloadAnchor: function(content, ext) {
+						var anchor = document.createElement("a");
+						anchor.style = "display:none !important";
+						anchor.id = "downloadanchor";
+						document.body.appendChild(anchor);
+
+						// If the [download] attribute is supported, try to use it
+						
+						if ("download" in anchor) {
+							anchor.download = this._filename + "." + ext;
+						}
+						anchor.href = content;
+						anchor.click();
+						anchor.remove();
+					},
+					_tableToCSV: function(table) {
+						// We'll be co-opting `slice` to create arrays
+						var slice = Array.prototype.slice;
+
+						return slice
+						.call(table.rows)
+						.map(function(row) {
+							return slice
+							.call(row.cells)
+							.map(function(cell) {
+								return '"t"'.replace("t", cell.textContent);
+							})
+							.join(",");
+						})
+						.join("\r\n");
+					}
+				};
 				
 				if ( !$('select[name="customers-select"]').hasClass('d-none') )
 					$('select[name="customers-select"]').select2({ width: '100%' });
@@ -141,8 +245,6 @@
 					if ( !$('input[name="sales-docs-types-check-nothing"]').prop('checked') ) {
 						salesDocsCodes = $('select[name="sales-docs-types-select"]').val();
 					}
-
-
 					
 					$.ajax({
 						method: 'POST',
@@ -184,13 +286,20 @@
 						},
 					});
 				});
+
+				// click on export
+				$('div[name="btn-export"]').on('click', function(e) {
+					e.preventDefault();
+
+					xport.toXLS('table_report');
+				});
 				
 				// checkboxes
 				$('input[name="sales-docs-types-check-nothing"]').on('change', function(e) {
 					var checked = $(this).prop('checked');
 					$('select[name="sales-docs-types-select"]').prop("disabled", checked);
 				});
-				
+
 			});
 		</script>
 	</body>
