change xls to csv

--- a/templates/sales_report.phtml
+++ b/templates/sales_report.phtml
@@ -191,7 +191,7 @@
 				$('div[name="btn-export"]').on('click', function(e) {
 					e.preventDefault();
 
-					xport.toXLS('table_report');
+					xport.toCSV('table_report');
 				});
 				
 				// checkboxes
