--- a/templates/sales_report.phtml
+++ b/templates/sales_report.phtml
@@ -303,7 +303,7 @@
 
 				function exportTableToExcel(tableID, filename = ''){
 					var downloadLink;
-					var dataType = 'application/vnd.ms-excel';
+					var dataType = 'application/vnd.ms-excel;charset="utf-8"';
 					var tableSelect = document.getElementById(tableID);
 					var tableHTML = tableSelect.outerHTML.replace(/ /g, '%20');
 					
