--- a/templates/sales_report.phtml
+++ b/templates/sales_report.phtml
@@ -96,9 +96,9 @@
 									
 							    <div class="row mt-3">
 							        <div class="col">
-							            <div name="report-content" class="table table-responsive">
-											<table id="table_report" name="table-report">
-												<thead>
+							            <div name="report-content" class="table-responsive">
+											<table id="table_report" name="table-report" class="table table-striped table-bordered table-hover table-sm">
+												<thead class="thead-dark">
 													<tr>
 														<th>Fecha</th>
 														<th>Hora</th>
