--- a/templates/sales_report.phtml
+++ b/templates/sales_report.phtml
@@ -96,7 +96,7 @@
 									
 							    <div class="row mt-3">
 							        <div class="col">
-							            <div name="report-content" class="table-responsive">
+							            <div name="report-content" class="table-responsive small">
 											<table id="table_report" name="table-report" class="table table-striped table-bordered table-hover table-sm">
 												<thead class="thead-dark">
 													<tr>
