--- a/templates/sales_report.phtml
+++ b/templates/sales_report.phtml
@@ -84,11 +84,11 @@
 								
 								<div class="row">
 							        <div class="col-12 col-md-4 col-lg-3">
-										<div class="btn btn-outline-primary" name="btn-report"><i class="fa fa-report"></i> Generar Reporte</div>
+										<div class="btn btn-outline-primary" name="btn-report"><i class="fa fa-ul-list"></i> Generar Reporte</div>
 									</div>
 
 									<div class="col-12 col-md-4 col-lg-3">
-										<div class="btn btn-outline-primary" name="btn-export"><i class="fa fa-xls"></i> Exportar a Excel</div>
+										<div class="btn btn-outline-primary" name="btn-export"><i class="fa fa-xls-file"></i> Exportar a Excel</div>
 									</div>
 								</div>
 								
