--- a/templates/customers.phtml
+++ b/templates/customers.phtml
@@ -61,14 +61,8 @@
 							inputClass: 'form-control',
 							listClass: 'd-none d-lg-table-cell',
 						},
-						fantasy_name: {
-							title: 'Nombre de fantasía',
-							width: '20%',
-							inputClass: 'form-control',
-							listClass: 'd-none d-lg-table-cell',
-						},
 						business_name: {
-							title: 'Razón social',
+							title: 'Veterinaria',
 							width: '40%',
 							inputClass: 'form-control',
 						},
