--- a/templates/login_projects_selection.phtml
+++ b/templates/login_projects_selection.phtml
@@ -67,7 +67,7 @@
 						url: '/login/projects/selected/' + project_id,
 						success: function(data, textStatus, jqXHR) {
 							if (data.status == 'ok') {
-								window.location.replace('/customers');
+								window.location.replace('/sales');
 							}
 							else if (data.status == 'error') {
 								$.stdShowMessage({
