--- a/templates/sales.phtml
+++ b/templates/sales.phtml
@@ -78,11 +78,12 @@
 								
 								<hr />
 								<div class="row mt-2">
-									<div class="col-lg-6 col-md-12">
+									<div class="col">
 										<div class="form-group">
 											<label class="font-weight-bold">Observaciones:</label>
 											<br>
-											<input type="text" class="form-control" name="doc-comments" />
+											<textarea type="text" class="form-control" name="doc-comments">
+											</textarea>
 										</div>
 									</div>
 								</div>
