--- a/templates/sales_report.phtml
+++ b/templates/sales_report.phtml
@@ -83,7 +83,7 @@
 								</div>
 								
 								<div class="row">
-							        <div class="col-12 col-md-4 col-lg-3">
+							        <div class="col">
 										<span class="btn btn-outline-primary pr-2" name="btn-report"><i class="fa fa-list-ul"></i> Generar Reporte</span>
 										<span class="btn btn-outline-primary" name="btn-export"><i class="fa fa-file-excel"></i> Exportar a Excel</span>
 									</div>
