--- a/templates/sales.phtml
+++ b/templates/sales.phtml
@@ -164,6 +164,7 @@
 					
 					if (validateDocument())
 					{
+						debugger;
 						var documentData = {
 							customer_id : 			$('select[name="customers-select"] option:selected').val(),
 							document_type_code : 	$('select[name="docs-types-select"] option:selected').val(),
