--- a/templates/sales.phtml
+++ b/templates/sales.phtml
@@ -82,7 +82,7 @@
 										<div class="form-group">
 											<label class="font-weight-bold">Observaciones:</label>
 											<br>
-											<textarea class="form-control" name="doc-comments"></textarea>
+											<textarea class="form-control" name="doc-comments" rows="10"></textarea>
 										</div>
 									</div>
 								</div>
