--- a/templates/customers.phtml
+++ b/templates/customers.phtml
@@ -70,16 +70,19 @@
 							title: 'Correo',
 							width: '20%',
 							inputClass: 'form-control',
+							listClass: 'd-none d-lg-table-cell',
 						},
 						location: {
 							title: 'Domicilio',
 							width: '20%',
 							inputClass: 'form-control',
+							listClass: 'd-none d-lg-table-cell',
 						},
 						contact_name: {
 							title: 'Nombre de Contacto',
 							width: '20%',
 							inputClass: 'form-control',
+							listClass: 'd-none d-lg-table-cell',
 						},
 						phone_number: {
 							title: 'Teléfono',
