--- a/templates/sales_query.phtml
+++ b/templates/sales_query.phtml
@@ -125,12 +125,17 @@
 						document_type_code: {
 							title: 'Código',
 							width: '10%',
+							list: false,
 						},
 						customer_id: {
-							title: 'Cliente',
+							title: 'Veterinaria',
 							width: '30%',
 							options: '/customers/options',
 						},
+						comments: {
+							title: 'Observaciones',
+							width: '30%',
+						}
 					}
 				});
 		 
