--- a/templates/sales.phtml
+++ b/templates/sales.phtml
@@ -45,6 +45,7 @@
 										</div>
 									</div>
 									
+									<php if (false) : ?>
 									<div class="col-lg-3 col-md-6">
 										<div class="form-group">
 											<label class="font-weight-bold">Comprobante:</label>
@@ -66,6 +67,7 @@
 											</select>
 										</div>
 									</div>
+									<php endif; ?>
 									
 									<div class="col-lg-3 col-md-6">
 										<div class="form-group">
