--- a/templates/sales.phtml
+++ b/templates/sales.phtml
@@ -45,7 +45,7 @@
 										</div>
 									</div>
 									
-									<php if (false) : ?>
+									<?php if (false) : ?>
 									<div class="col-lg-3 col-md-6">
 										<div class="form-group">
 											<label class="font-weight-bold">Comprobante:</label>
@@ -67,7 +67,7 @@
 											</select>
 										</div>
 									</div>
-									<php endif; ?>
+									<?php endif; ?>
 									
 									<div class="col-lg-3 col-md-6">
 										<div class="form-group">
