--- a/templates/sales_report.phtml
+++ b/templates/sales_report.phtml
@@ -29,7 +29,7 @@
 											<?php if ($customers_enabled) : ?>
 											<?php foreach($customers as $customer) : ?>
 												<option value="<?= $customer->id ?>">
-													<?= $customer->unique_code . ' | ' . $customer->business_name ?>
+													<?= $customer->business_name ?>
 												</option>
 											<?php endforeach; ?>
 											<?php endif; ?>
