--- a/templates/sales_report.phtml
+++ b/templates/sales_report.phtml
@@ -37,6 +37,7 @@
 										</div>
 									</div>
 								
+									<?php if (false) : ?>
 									<div class="col-lg-4 col-md-6">
 										<div class="form-group">
 											<label class="font-weight-bold">Comp. de Ventas:</label>
@@ -58,6 +59,7 @@
 											</select>
 										</div>
 									</div>
+											<?php endif; ?>
 
 									<div class="col-lg-4 col-md-6">
 										<div class="form-group">
