--- a/templates/sales_report.phtml
+++ b/templates/sales_report.phtml
@@ -73,6 +73,7 @@
 							        <div class="col">
 										<span class="btn btn-outline-primary pr-2" name="btn-report"><i class="fa fa-list-ul"></i> Generar Reporte</span>
 										<span class="btn btn-outline-primary" name="btn-export"><i class="fa fa-file-excel"></i> Exportar a Excel</span>
+										<span class="btn btn-outline-primary" name="btn-email"><i class="fa fa-email"></i> Enviar Email</span>
 									</div>
 								</div>
 								
