--- a/templates/sales.phtml
+++ b/templates/sales.phtml
@@ -84,7 +84,19 @@
 										<div class="form-group">
 											<label class="font-weight-bold">Observaciones:</label>
 											<br>
-											<textarea class="form-control" name="doc-comments" rows="6"></textarea>
+											<textarea class="form-control" name="doc-comments" rows="6">
+											Entero
+											Kualcovit
+											Predni
+											Rani
+											Enro
+											Doxi
+											Pipetas
+											Multi perro
+											Multi gato
+											Kualcoderm
+											Kualcohepat
+											</textarea>
 										</div>
 									</div>
 								</div>
