--- a/templates/sales.phtml
+++ b/templates/sales.phtml
@@ -95,8 +95,7 @@ Pipetas
 Multi perro
 Multi gato
 Kualcoderm
-Kualcohepat
-											</textarea>
+Kualcohepat</textarea>
 										</div>
 									</div>
 								</div>
