--- a/templates/partials/libs.phtml
+++ b/templates/partials/libs.phtml
@@ -28,3 +28,8 @@
 
 <!-- Custom JavaScript -->
 <script src="/assets/js/plugins/custom.js?v9"></script>
+
+<!-- Table Export -->
+<script src="/assets/js/plugins/xlsx.core.min.js"></script>
+<script src="/assets/js/plugins/FileSaver.min.js"></script>
+<script src="/assets/js/plugins/tableexport.min.js"></script>
