--- a/templates/sales_report.phtml
+++ b/templates/sales_report.phtml
@@ -211,7 +211,12 @@
 				});
 
 				// export to excel
-				function exportTableToExcel(tableID, filename = ''){
+				function exportTableToExcel(tableID)
+				{
+					TableExport(document.getElementsById(tableID));
+				}
+
+				/*function exportTableToExcel(tableID, filename = ''){
 					var downloadLink;
 					var dataType = 'application/vnd.ms-excel';
 					var tableSelect = document.getElementById(tableID);
@@ -240,7 +245,7 @@
 						//triggering the function
 						downloadLink.click();
 					}
-				}
+				}*/
 
 			});
 		</script>
