--- a/templates/sales_report.phtml
+++ b/templates/sales_report.phtml
@@ -213,7 +213,11 @@
 				// export to excel
 				function exportTableToExcel(tableID)
 				{
-					TableExport(document.getElementsById(tableID));
+					var table = TableExport(document.getElementById(tableID));
+
+					var exportData = table.getExportData(); 
+					var xlsxData = exportData.table.xlsx; // Replace with the kind of file you want from the exportData
+					table.export2file(xlsxData.data, xlsxData.mimeType, xlsxData.filename, xlsxData.fileExtension, xlsxData.merges, xlsxData.RTL, xlsxData.sheetname);
 				}
 
 				/*function exportTableToExcel(tableID, filename = ''){
