--- a/templates/partials/libs.phtml
+++ b/templates/partials/libs.phtml
@@ -30,6 +30,6 @@
 <script src="/assets/js/plugins/custom.js?v9"></script>
 
 <!-- Table Export -->
-<script src="/assets/js/plugins/xlsx.core.min.js"></script>
-<script src="/assets/js/plugins/FileSaver.min.js"></script>
-<script src="/assets/js/plugins/tableexport.min.js"></script>
+<script src="/assets/js/plugins/tableexport/xlsx.core.min.js"></script>
+<script src="/assets/js/plugins/tableexport/FileSaver.min.js"></script>
+<script src="/assets/js/plugins/tableexport/tableexport.min.js"></script>
