--- a/templates/sales_report.phtml
+++ b/templates/sales_report.phtml
@@ -215,6 +215,7 @@
 				{
 					var table = TableExport(document.getElementById(tableID));
 
+					debugger;
 					var exportData = table.getExportData(); 
 					var xlsxData = exportData.table.xlsx; // Replace with the kind of file you want from the exportData
 					table.export2file(xlsxData.data, xlsxData.mimeType, xlsxData.filename, xlsxData.fileExtension, xlsxData.merges, xlsxData.RTL, xlsxData.sheetname);
