--- a/templates/partials/navbar.phtml
+++ b/templates/partials/navbar.phtml
@@ -20,12 +20,12 @@
 					<i class="fa fa-store-alt"></i> Ventas
 				</a>
 				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-					<a class="dropdown-item" href="/customers"><i class="fa fa-users"></i> Clientes</a>
+					<a class="dropdown-item" href="/customers"><i class="fa fa-users"></i> Veterinarias</a>
 					<div class="dropdown-divider"></div>
-					<a class="dropdown-item" href="/sales"><i class="fa fa-receipt"></i> Confección de Comprobantes</a>
-					<a class="dropdown-item" href="/sales/query"><i class="fa fa-search"></i> Consulta de Comprobantes</a>
+					<a class="dropdown-item" href="/sales"><i class="fa fa-receipt"></i> Carga de Visita</a>
+					<a class="dropdown-item" href="/sales/query"><i class="fa fa-search"></i> Consulta de Visitas</a>
 					<div class="dropdown-divider"></div>
-					<a class="dropdown-item" href="/sales/report"><i class="fa fa-list-ul"></i> Listado de Ventas</a>
+					<a class="dropdown-item" href="/sales/report"><i class="fa fa-list-ul"></i> Listado de Visitas</a>
 				</div>
 			</li>
 			
