--- a/templates/sales.phtml
+++ b/templates/sales.phtml
@@ -252,7 +252,7 @@ Kualcohepat</textarea>
 					$('select[name="docs-types-select"]').val('N/A').trigger('change');
 					$('input[name="doc-date"]').val("");
 					
-					$('textarea[name="doc-comments"]').val("");
+					$('textarea[name="doc-comments"]').val("Entero\nKualcovit\nPredni\nRani\nEnro\nDoxi\nPipetas\nMulti perro\nMulti gato\nKualcoderm\nKualcohepat");
 				}
 				
 				function hasUnsavedChanges()
