--- a/templates/sales_report.phtml
+++ b/templates/sales_report.phtml
@@ -153,7 +153,7 @@
 													"<td>" + record.dated_at + "</td>" +
 													"<td>" + record.timed_at + "</td>" +
 													"<td>" + record.business_name + "</td>" +
-													"<td>" + record.location + "</td>" +
+													"<td>'" + record.location + "</td>" +
 													"<td>Jose Boccuzzi</td>" +
 													"<td>CAP</td>" +
 													"<td>" + record.phone_number + "</td>" +
