--- a/templates/sales_report.phtml
+++ b/templates/sales_report.phtml
@@ -73,7 +73,6 @@
 							        <div class="col">
 										<span class="btn btn-outline-primary pr-2" name="btn-report"><i class="fa fa-list-ul"></i> Generar Reporte</span>
 										<span class="btn btn-outline-primary" name="btn-export"><i class="fa fa-file-excel"></i> Exportar a Excel</span>
-										<span class="btn btn-outline-primary" name="btn-email"><i class="fa fa-envelope"></i> Enviar Email</span>
 									</div>
 								</div>
 								
@@ -153,7 +152,7 @@
 													"<td>" + record.dated_at + "</td>" +
 													"<td>" + record.timed_at + "</td>" +
 													"<td>" + record.business_name + "</td>" +
-													"<td>'" + record.location + "</td>" +
+													"<td>Dir: " + record.location + "</td>" +
 													"<td>Jose Boccuzzi</td>" +
 													"<td>CAP</td>" +
 													"<td>" + record.phone_number + "</td>" +
