--- a/templates/sales_report.phtml
+++ b/templates/sales_report.phtml
@@ -149,10 +149,10 @@
 
 								data.Records.forEach(function(record) {
 									body.append("<tr>" +
-													"<td>" + record.dated_at + "</td>" +
+													"<td class='tableexport-string'>" + record.dated_at + "</td>" +
 													"<td>" + record.timed_at + "</td>" +
 													"<td>" + record.business_name + "</td>" +
-													"<td>Dir: " + record.location + "</td>" +
+													"<td>" + record.location + "</td>" +
 													"<td>Jose Boccuzzi</td>" +
 													"<td>CAP</td>" +
 													"<td>" + record.phone_number + "</td>" +
