--- a/templates/sales_report.phtml
+++ b/templates/sales_report.phtml
@@ -150,15 +150,15 @@
 								data.Records.forEach(function(record) {
 									body.append("<tr>" +
 													"<td class='tableexport-string'>" + record.dated_at + "</td>" +
-													"<td>" + record.timed_at + "</td>" +
-													"<td>" + record.business_name + "</td>" +
-													"<td>" + record.location + "</td>" +
-													"<td>Jose Boccuzzi</td>" +
-													"<td>CAP</td>" +
-													"<td>" + record.phone_number + "</td>" +
-													"<td>" + record.contact_name + "</td>" +
-													"<td>" + record.comments + "</td>" +
-													"<td>" + record.email + "</td>" +
+													"<td class='tableexport-string'>" + record.timed_at + "</td>" +
+													"<td class='tableexport-string'>" + record.business_name + "</td>" +
+													"<td class='tableexport-string'>" + record.location + "</td>" +
+													"<td class='tableexport-string'>Jose Boccuzzi</td>" +
+													"<td class='tableexport-string'>CAP</td>" +
+													"<td class='tableexport-string'>" + record.phone_number + "</td>" +
+													"<td class='tableexport-string'>" + record.contact_name + "</td>" +
+													"<td class='tableexport-string'>" + record.comments + "</td>" +
+													"<td class='tableexport-string'>" + record.email + "</td>" +
 												"</tr>");
 								});
 								
