--- a/templates/sales_report.phtml
+++ b/templates/sales_report.phtml
@@ -155,9 +155,9 @@
 													"<td class='tableexport-string'>" + record.location.split("\n").join(", ") + "</td>" +
 													"<td class='tableexport-string'>Jose Boccuzzi</td>" +
 													"<td class='tableexport-string'>CAP</td>" +
-													"<td class='tableexport-string'>" + record. + "</td>" +
+													"<td class='tableexport-string'>" + record.phone_number + "</td>" +
 													"<td class='tableexport-string'>" + record.contact_name + "</td>" +
-													"<td class='tableexport-string'>" + record.comments +phone_number "</td>" +
+													"<td class='tableexport-string'>" + record.comments + "</td>" +
 													"<td class='tableexport-string'>" + record.email + "</td>" +
 												"</tr>");
 								});
