--- a/templates/sales.phtml
+++ b/templates/sales.phtml
@@ -84,7 +84,18 @@
 										<div class="form-group">
 											<label class="font-weight-bold">Observaciones:</label>
 											<br>
-											<textarea class="form-control" name="doc-comments" rows="12">Entero\nKualcovit\nPredni\nRani\nEnro\nDoxi\nPipetas\nMulti perro\nMulti gato\nKualcoderm\nKualcohepat</textarea>
+											<textarea class="form-control" name="doc-comments" rows="12">
+Entero
+Kualcovit
+Predni
+Rani
+Enro
+Doxi
+Pipetas
+Multi perro
+Multi gato
+Kualcoderm
+Kualcohepat</textarea>
 										</div>
 									</div>
 								</div>
